fix: align page info

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -382,6 +382,7 @@ html.is-native-ios {
 
 .page-info {
   @apply border rounded-md;
+  padding-left: 1px;
 
   &-inner {
     @apply py-2;
